--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!-- 
 
-Copyright Information
+Copyright Informationjkbk
 ---------------------
 
 TUTORIAL 3: Create an animated 'scroll to top' button using CSS and jQuery! - Posted by: Simon Clements
